# packet_inspector

./: Cargo.toml  README.md  build.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: app.rs  main.rs  shared_state.rs
crates/gui/src/app/: about.rs  connection.rs  filter.rs  hex_viewer.rs  json_viewer.rs  packet_list.rs  text_viewer.rs
crates/proxy-lib/: Cargo.toml  build.rs
crates/proxy-lib/src/: lib.rs  packet_io.rs  packet_registry.rs
src/: client.rs  logger.rs  main.rs  packet_io.rs  packet_registry.rs  proxy.rs  temp.txt
